# yew_ssr

./: .gitignore  Cargo.toml  README.md  index.html  justfile  tailwind.config.js  tailwind.sh  trunk.toml
scripts/: map.js
src/: lib.rs
src/client/: hydrate.rs  lib.rs
src/client/components/: map.rs  mod.rs  navbar.rs
src/components/: navbar.rs
src/server/: cache.rs  server.rs
src/styles/: index.scss
styles/: tailwind.scss
