[package]
name = "yew_app"
version = "0.1.0"
edition = "2021"
default-run = "server"
# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client"
path = "./src/client/lib.rs"

[[bin]]
name = "server"
path = "./src/server/server.rs"

[[bin]]
name = "hydrate"
path = "./src/client/hydrate.rs"


[dependencies]
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
yew-router = { git = "https://github.com/yewstack/yew.git" } 


# frontend dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "hydration"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"


# backend dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-http = { version = "0.3.4", features = ["trace", "fs"] }
axum-macros = "0.3.0"
axum-extra = { version = "0.4.1", features = ["spa"] }
clap = { version = "4.0.27", features = ["derive"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["ssr"] }
axum = "0.6.0"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
anyhow = "1.0.66"
env_logger = "0.9.1"
once_cell = "1.16.0"
dotenv = "0.15.0"


